--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <body> 
 	
 	<!-- PRELOADER -->
-	<div id="preloader">
+	<!-- <div id="preloader">
 		<div class="loader_line"></div>
-	</div>
+	</div> -->
 	<!-- /PRELOADER -->
 	
 	<!-- WRAPPER ALL -->
@@ -210,10 +210,10 @@
 	<!-- / WRAPPER ALL -->
 	
 <!-- SCRIPTS -->
-<script src="js/jquery.js"></script>
-<!--[if lt IE 10]> <script type="text/javascript" src="js/ie8.js"></script> <![endif]-->	
-<script src="js/plugins.js"></script>
-<script src="js/init.js"></script>
+<script src="/js/jquery.js"></script>
+<!-- [if lt IE 10]> <script type="text/javascript" src="js/ie8.js"></script> <![endif]	 -->
+<script src="/js/plugins.js" type="text/javascript"></script>
+<script src="/js/init.js" type="text/javascript"></script>
 <!-- /SCRIPTS -->
 
 </body>
