--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <body> 
 	
 	<!-- PRELOADER -->
-	<!-- <div id="preloader">
+	<div id="preloader">
 		<div class="loader_line"></div>
-	</div> -->
+	</div>
 	<!-- /PRELOADER -->
 	
 	<!-- WRAPPER ALL -->
