--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 	<!-- / WRAPPER ALL -->
 	
 <!-- SCRIPTS -->
-<script src="/js/jquery.js"></script>
+<script src="/js/jquery.js" type="text/javascript"></script>
 <!-- [if lt IE 10]> <script type="text/javascript" src="js/ie8.js"></script> <![endif]	 -->
 <script src="/js/plugins.js" type="text/javascript"></script>
 <script src="/js/init.js" type="text/javascript"></script>
